# carboxyl

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  cliff.toml  license.md  readme.md
.github/workflows/: rust.yml
chromium/patches/chromium/: 0025-fix-m147-finalize-post-rebase-API-drift-fixes.patch
scripts/: build.sh  copy-binaries.sh  docker-build.sh  docker-push.sh  env.sh  gclient.sh  gn.sh  npm-package.mjs  patches.sh  run.sh  runtime-hash.sh  runtime-pull.sh  runtime-push.sh
src/: browser.rs  cli.rs  input.rs  lib.rs  logger.rs  main.rs  output.rs  utils.rs
src/browser/: host_display_client.cc  host_display_client.h  renderer.cc  servo.rs  servo_runtime.rs
src/browser/servo/: delegates.rs  event_loop.rs  events.rs  geometry.rs  input_thread.rs  keyboard.rs  servo_thread.rs  session.rs  signal_thread.rs  url.rs  waker.rs
src/browser/servo/session/: app_state.rs  dispatch.rs  input.rs  render.rs  timing.rs
src/cli/: cli.rs  usage.txt
src/gfx/: vector.rs
src/input/: tty.rs
src/input/dcs/: resource.rs
src/output/: browser_widget.rs  extract.js  nav_widget.rs  painter.rs  render_thread.rs  renderer.rs  suppress.js  text_overlay.rs  window.rs
src/platform/: signal.rs
src/utils/: log.rs
tests/: servo_rendering.rs
