[package]
name = "carboxyl"
version = "0.0.3"
edition = "2024"

[dependencies]
rustls = "0.23"
servo = "0.1"
url = "2.5"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
rustix = { version = "1", features = ["termios", "stdio", "process"] }
dpi = "0.1"
crossterm = "0.29"
unicode-width = "0.2"
log = "0.4"
simplelog = "0.12"
glam = "0.32"
